<resources>
    <string name="app_name">ToDo List</string>
    <string name="main_toolbar_title">To Do List</string>
    <string name="tab_title_active">Active</string>
    <string name="tab_title_completed">Completed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_todo">Add Todo</string>
    <string name="aw_man">Aw, Man!</string>
    <string name="no_todo_items_in_the_list">No todo items in the list</string>
    <string name="active_todo_empty_text">No active todo item in the list</string>
    <string name="completed_todo_empty_text">No completed todo item in the list</string>
    <string name="reminder">Remind Me:</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="at_symbol">\@</string>
    <string name="please_enter_title">Please Enter Title</string>
    <string name="select_valid_time">Select Valid reminder time</string>
</resources>
