<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ToolBarWithNavigationBack"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="10dp">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_todo"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/add_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:src="@drawable/paper_airplane_gray"
                    android:textColor="#bebebe"
                    android:textSize="16sp" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appbar"
            android:layout_marginEnd="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:freezesText="true"
            android:gravity="top"
            android:hint="@string/title"
            android:inputType="textMultiLine|textShortMessage|textCapSentences"
            android:textColorHint="#b4b3b3"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginEnd="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginStart="14dp"
            android:backgroundTint="@android:color/transparent"
            android:freezesText="true"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine|textShortMessage|textCapSentences"
            android:textColorHint="#b4b3b3"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/reminder_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_margin="18dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_access_alarm_black_24dp" />

            <TextView
                android:id="@+id/reminder_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/reminder"
                android:textColor="#b4b3b3" />

            <Switch
                android:id="@+id/switch_socialwall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:theme="@style/SwitchReminder" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_time_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@+id/reminder_container"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/at_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/at_symbol"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="24dp" />

        </LinearLayout>

    </RelativeLayout>

</layout>
